[gd_scene load_steps=3 format=3 uid="uid://c7ybot3fi5ei5"]

[ext_resource type="Texture2D" uid="uid://c5qod5au4j12i" path="res://Assets/UI/Buttons/BuildButton.png" id="1_v08xu"]
[ext_resource type="Script" path="res://Scenes/UIScenes/TurretInfo.gd" id="1_yx84e"]

[node name="TurretInfo" type="ColorRect"]
custom_minimum_size = Vector2(0, 120)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -120.0
offset_right = 415.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.45098)
script = ExtResource("1_yx84e")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurretTexture" type="TextureRect" parent="H"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="H"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="InfoText" type="Label" parent="H"]
layout_mode = 2
text = "Damage:
Fire Rate:
Range:
Damage Type:"

[node name="Control" type="Control" parent="H"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="V" type="VBoxContainer" parent="H"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1

[node name="DamageText" type="Label" parent="H/V"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="FireRateText" type="Label" parent="H/V"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="RangeText" type="Label" parent="H/V"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="DamageTypeText" type="Label" parent="H/V"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.560784)
layout_mode = 0
offset_top = -30.0
offset_right = 124.0
texture = ExtResource("1_v08xu")
expand_mode = 1

[node name="TowerName" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
